tests/basic/good/test06.pepa
// File: tests/good/test04.pepa
// Syntax analysis: synchronisation is supported

r = 1.0;
s = 10.0;

P1 = (a, r).P2;
P2 = (b, s).P1; 

P1 <b> P1 

