tests/basic/bad/test24.pepa
% File: tests/bad/test24.pepa
% Illegal component identifier (should begin with an uppercase letter)
p = (a, r).p;
(p <> p)
